fixed margin spacing

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@
 
 body {
   background-color: var(--background-color);
-  margin: 0 auto 60px;
 }
 
 .sectionTitle {
