--- a/src/common/Footer/FooterStyles.module.css
+++ b/src/common/Footer/FooterStyles.module.css
@@ -1,6 +1,7 @@
 .container {
   text-align: center;
   padding-top: 100px;
+  margin-bottom: 60px;
   p {
     font-size: 16px;
     color: var(--form-text-color);
